xaos: fix typo in long description
git-svn-id: https://svn.macports.org/repository/macports/trunk@70619 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/xaos/Portfile
+++ b/dports/graphics/xaos/Portfile
@@ -16,7 +16,7 @@ description             real-time interactive fractal zoomer
 
 long_description        XaoS is a fast portable real-time interactive \
                         fractal zoomer. It displays the Mandelbrot set \
-                        (among other escape time fractals) and allows you \
+                        (among other escape time fractals) and allows you to \
                         zoom smoothly into the fractal. Various coloring \
                         modes are provided for both the points inside and \
                         outside the selected set. In addition, switching \
