log2timeline: add missing dependencies and fix warning during configure (see #26087); add license info
git-svn-id: https://svn.macports.org/repository/macports/trunk@70622 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/log2timeline/Portfile
+++ b/dports/security/log2timeline/Portfile
@@ -5,10 +5,11 @@ PortGroup           perl5 1.0
 
 name                log2timeline
 version             0.50
-revision            1
+revision            2
 categories          security
 platforms           darwin
 maintainers         yahoo.fr:jul_bsd openmaintainer
+license             GPL-3+
 
 description         framework for automatic creation of a super timeline
 
@@ -42,11 +43,17 @@ depends_lib         port:p5-archive-zip \
                     port:p5-libwww-perl \
                     port:p5-net-pcap \
                     port:p5-netpacket \
-                    port:p5-xml-libxml
+                    port:p5-xml-libxml \
+                    port:p5-datemanip \
+                    port:p5-parse-win32registry \
+                    port:p5-file-mork \
+                    port:p5-data-hexify \
+                    port:p5-version
 
 supported_archs     noarch
 
 configure.cmd       perl Makefile.PL
+configure.pre_args
 
 post-destroot {
     eval delete [glob ${destroot}${prefix}/lib/perl5/*/darwin-2level/perllocal.pod]
