xmlenc: update to 0.51 and indicate this is noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@70623 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/xmlenc/Portfile
+++ b/dports/java/xmlenc/Portfile
@@ -3,10 +3,12 @@
 PortSystem              1.0
 
 name                    xmlenc
-version                 0.50
+version                 0.51
 categories              java textproc
 platforms               darwin
 maintainers             nomaintainer
+supported_archs         noarch
+
 description             fast stream-based XML output library for Java
 long_description        The xmlenc library is a fast stream-based XML output \
                         library for Java. Main design goals are performance, \
@@ -15,7 +17,9 @@ long_description        The xmlenc library is a fast stream-based XML output \
 homepage                http://xmlenc.sourceforge.net/
 master_sites            ${homepage}
 
-checksums               md5     adc720754a91aaca6f23c338b458c1f1
+checksums               md5     6477eae0270f9da4319ca2cfb79304ed \
+                        sha1    900acd30b3d76202c6193e677055734562660bd4 \
+                        rmd160  c336caa053d916a9f5074b68273bbdd635379bc1
 
 depends_build           bin:ant:apache-ant
 depends_lib             bin:java:kaffe
