xaos: update to 3.5, add forgotten dependency on gsl, fix warning when configuring universal
git-svn-id: https://svn.macports.org/repository/macports/trunk@70624 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/xaos/Portfile
+++ b/dports/graphics/xaos/Portfile
@@ -3,14 +3,12 @@
 PortSystem              1.0
 
 name                    xaos
-version                 3.4
-revision                1
+version                 3.5
 categories              graphics
 maintainers             nomaintainer
 homepage                http://xaos.sourceforge.net/
 platforms               darwin
 master_sites            sourceforge
-distname                XaoS-${version}
 
 description             real-time interactive fractal zoomer
 
@@ -29,12 +27,16 @@ long_description        XaoS is a fast portable real-time interactive \
                         (for those of you without drivers licenses), \
                         palette changing, GIF saving, and fractal inversion.
 
-checksums               md5     366fd8151e9642a0d9afce889912e388 \
-                        sha1    4e419715ae0479fa3a20ed5f48ede7ad222f2d10 \
-                        rmd160  37ce4728940e80c2876792650aa656236893d5f7
+checksums               md5     465d1469b276501a58bf325e493ea591 \
+                        sha1    6d16a58187fba7276e6bd0547cc2fd6bb073b801 \
+                        rmd160  193553818646fbf2d7c9f0c855ca3123446e16bc
 
 depends_lib             port:xorg-libXext \
-                        port:libpng
+                        port:libpng \
+                        port:gsl
+
+# Fix "make: `install' is up to date" on case-insensitive filesystems.
+patchfiles              patch-Makefile.in.diff
 
 configure.cflags-append -I${prefix}/include
 configure.args          --with-long-double=yes \
@@ -43,3 +45,5 @@ configure.args          --with-long-double=yes \
                         --infodir=${prefix}/share/info \
                         --x-includes=${prefix}/include \
                         --x-libraries=${prefix}/lib
+
+configure.universal_args-delete --disable-dependency-tracking
