--- a/dports/games/xboard/Portfile
+++ b/dports/games/xboard/Portfile
@@ -1,29 +1,37 @@
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name		xboard
-version		4.2.6
-revision	3
-categories	games
-maintainers	nomaintainer
-description	X frontend for Crafty, GNUChess, Internet Chess Servers, or e-mail chess
-long_description	\
-	Xboard is a graphical chessboard that can serve as a user interface \
-	for Crafty, GNU Chess, for Internet Chess Servers, or for electronic \
-	mail correspondence chess. xboard can also be used by itself.
-homepage	http://www.tim-mann.org/xboard.html
-platforms	darwin
-master_sites	gnu
-checksums	md5 1d6e38c61277eed6ad7af352586b37d5
-depends_lib	port:xorg-libXaw
+name                xboard
+version             4.2.6
+revision            3
+categories          games
+maintainers         nomaintainer
+platforms           darwin
 
-configure.args		--enable-zippy
-destroot.destdir	prefix=${destroot}${prefix} mandir=${destroot}${prefix}/share/man
+description         X frontend for Crafty, GNUChess, Internet Chess Servers, \
+                    or e-mail chess
+
+long_description    Xboard is a graphical chessboard that can serve as a user \
+                    interface for Crafty, GNU Chess, for Internet Chess \
+                    Servers, or for electronic mail correspondence chess. \
+                    xboard can also be used by itself.
+
+homepage            http://www.tim-mann.org/xboard.html
+master_sites        gnu
+
+checksums           md5     1d6e38c61277eed6ad7af352586b37d5
+
+depends_lib         port:xorg-libXaw
+
+configure.args      --enable-zippy
+
+destroot.destdir    prefix=${destroot}${prefix} \
+                    mandir=${destroot}${prefix}/share/man
 
 platform darwin {
-	depends_build-append port:libtool
-	pre-configure {
-		copy -force ${prefix}/share/libtool/config/config.guess ${prefix}/share/libtool/config/config.sub ${worksrcpath}
-	}
+    depends_build-append port:libtool
+    pre-configure {
+        copy -force ${prefix}/share/libtool/config/config.guess ${prefix}/share/libtool/config/config.sub ${worksrcpath}
+    }
 }
