xboard: update to 4.4.3, switch homepage to GNU
git-svn-id: https://svn.macports.org/repository/macports/trunk@70626 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/xboard/Portfile
+++ b/dports/games/xboard/Portfile
@@ -3,11 +3,11 @@
 PortSystem          1.0
 
 name                xboard
-version             4.2.6
-revision            3
+version             4.4.3
 categories          games
 maintainers         nomaintainer
 platforms           darwin
+license             GPL-3+
 
 description         X frontend for Crafty, GNUChess, Internet Chess Servers, \
                     or e-mail chess
@@ -17,10 +17,12 @@ long_description    Xboard is a graphical chessboard that can serve as a user \
                     Servers, or for electronic mail correspondence chess. \
                     xboard can also be used by itself.
 
-homepage            http://www.tim-mann.org/xboard.html
+homepage            http://www.gnu.org/software/xboard/
 master_sites        gnu
 
-checksums           md5     1d6e38c61277eed6ad7af352586b37d5
+checksums           md5     6b30535c0883205d23d389b12c1295a8 \
+                    sha1    bcc7ce76475ac70d306e89ee8cf87496f6e7cd26 \
+                    rmd160  e56694324acaf671d3dc4480aefe83fda89a7138
 
 depends_lib         port:xorg-libXaw
 
