xdaliclock: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@70627 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xdaliclock/Portfile
+++ b/dports/x11/xdaliclock/Portfile
@@ -17,3 +17,6 @@ checksums        md5 be9642cc711a8d93ff13faac0cf4f306
 configure.dir    ${worksrcpath}/X11
 build.dir        ${configure.dir}
 destroot.destdir install_prefix=${destroot}
+
+livecheck.type      regex
+livecheck.regex     ${name}-(\[0-9.\]+)\\.tar
