--- a/dports/x11/xdaliclock/Portfile
+++ b/dports/x11/xdaliclock/Portfile
@@ -1,22 +1,29 @@
 # $Id$
 
-PortSystem       1.0
-name             xdaliclock
-version          2.20
-categories       x11
-maintainers      nomaintainer
-description      A rather neat animated clock
-long_description \
-    This is a neat program which ``morphs'' each of the \
-    digits into the next in the sequence to update the \
-    time. Good processor hog for all you P90 owners.
-homepage         http://www.jwz.org/xdaliclock/
-platforms        darwin
-master_sites     ${homepage}
-checksums        md5 be9642cc711a8d93ff13faac0cf4f306
-configure.dir    ${worksrcpath}/X11
-build.dir        ${configure.dir}
-destroot.destdir install_prefix=${destroot}
+PortSystem          1.0
+
+name                xdaliclock
+version             2.20
+categories          x11
+platforms           darwin
+maintainers         nomaintainer
+
+description         A rather neat animated clock
+
+long_description    This is a neat program which ``morphs'' each of the \
+                    digits into the next in the sequence to update the \
+                    time. Good processor hog for all you P90 owners.
+
+homepage            http://www.jwz.org/xdaliclock/
+master_sites        ${homepage}
+
+checksums           md5     be9642cc711a8d93ff13faac0cf4f306
+
+configure.dir       ${worksrcpath}/X11
+
+build.dir           ${configure.dir}
+
+destroot.destdir    install_prefix=${destroot}
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[0-9.\]+)\\.tar
