xdaliclock: update descriptions
git-svn-id: https://svn.macports.org/repository/macports/trunk@70629 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xdaliclock/Portfile
+++ b/dports/x11/xdaliclock/Portfile
@@ -8,11 +8,10 @@ categories          x11
 platforms           darwin
 maintainers         nomaintainer
 
-description         A rather neat animated clock
+description         morphing animated clock
 
-long_description    This is a neat program which ``morphs'' each of the \
-                    digits into the next in the sequence to update the \
-                    time. Good processor hog for all you P90 owners.
+long_description    ${name} is a graphical clock which morphs each digit \
+                    into the next.
 
 homepage            http://www.jwz.org/xdaliclock/
 master_sites        ${homepage}
