--- a/dports/x11/xdaliclock/Portfile
+++ b/dports/x11/xdaliclock/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                xdaliclock
-version             2.20
+version             2.34
 categories          x11
 platforms           darwin
 maintainers         nomaintainer
@@ -16,7 +16,12 @@ long_description    ${name} is a graphical clock which morphs each digit \
 homepage            http://www.jwz.org/xdaliclock/
 master_sites        ${homepage}
 
-checksums           md5     be9642cc711a8d93ff13faac0cf4f306
+checksums           md5     e3fd48ae881d1b3194584ef92dda67fb \
+                    sha1    67f11bdc7c568123b5727622ee4a8cf9196c9e8b \
+                    rmd160  bf6e05268a94ebb10850e3e6a8d4aa091880cc92
+
+depends_lib         port:xorg-libXt \
+                    port:xorg-libXext
 
 configure.dir       ${worksrcpath}/X11
 
