--- a/dports/security/policykit/Portfile
+++ b/dports/security/policykit/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            policykit
-version         0.9
+version         0.96
 description     PolicyKit is an application-level toolkit for defining and \
                 handling the policy that allows unprivileged processes to \
                 speak to privileged processes
@@ -16,25 +16,31 @@ platforms       darwin
 homepage        http://www.freedesktop.org/wiki/Software/PolicyKit
 master_sites    http://hal.freedesktop.org/releases/
 
-distname        PolicyKit-${version}
+distname        polkit-${version}
 
-checksums       md5     802fd13ae41f73d79359e5ecb0a98716 \
-                sha1    ac99c580eff72f6d5df261c155fb047306439f85 \
-                rmd160  197262d1c48e55558dd4bd57d7bbd8734666129c
+checksums       md5     e0a06da501b04ed3bab986a9df5b5aa2 \
+                sha1    0815b2ee2ffc2ebf2b6fc73491018a898fc73930 \
+                rmd160  19847f0835a3041446523066e6db58dfb60d3aae
 
 patchfiles      patch-configure.diff \
-                patch-src-kit-kit-lib.c.diff \
-                patch-src-polkit-dbus-polkit-simple.c.diff \
-                patch-src-polkit-dbus-polkit-resolve-exe-helper.c.diff \
-                patch-src-polkit-grant-polkit-grant-helper.c.diff \
-                patch-src-polkit-grant-polkit-grant-helper-pam.c.diff
+                patch-src-programs-pkexec.c.diff
 
+post-patch      {
+                    if {${os.major} < "10"} {
+                        reinplace "s|security/pam|pam/pam|" ${worksrcpath}/configure \
+                            ${worksrcpath}/src/polkitagent/polkitagenthelper.c \
+                            ${worksrcpath}/src/programs/pkexec.c
+                    }
+                }
+
+configure.cflags-append -I/usr/include
 configure.ldflags-append -L/usr/lib
 
 configure.args  --with-authfw=pam \
                 --with-pam-prefix=/etc/pam.d \
                 --with-pam-module-dir=/usr/lib/pam \
-                --disable-selinux \
+                --disable-introspection \
+                --disable-silent-rules \
                 --enable-man-pages \
                 --disable-gtk-doc
 
@@ -43,7 +49,7 @@ depends_build   port:pkgconfig \
                 port:p5-xml-parser \
                 port:gnome-doc-utils
 
-depends_lib     port:dbus-glib
+depends_lib     port:eggdbus
 
 variant docs description {Build API docs using gtk-doc} {
         configure.args-delete --disable-gtk-doc
@@ -57,4 +63,4 @@ pre-destroot {
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
-livecheck.regex "PolicyKit-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.regex "polkit-(\\d+(?:\\.\\d+)*)${extract.suffix}"
