--- a/dports/gnome/gconf/Portfile
+++ b/dports/gnome/gconf/Portfile
@@ -6,8 +6,7 @@ PortGroup       muniversal 1.0
 
 name            gconf
 set my_name     GConf
-version         2.26.2
-revision        1
+version         2.28.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -25,9 +24,9 @@ master_sites    gnome:sources/${my_name}/${branch}/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums       md5     8b55d58dab13e821e048627aa4f92b8b \
-                sha1    bf5323d974fa22165de2144100234647fd50ef17 \
-                rmd160  280cd55dc3562445c716b88dfddba4ddd2508786
+checksums       md5     27663faf0af4f6a6d534de9270f6d24a \
+                sha1    944e067a85b43e7a778b9ee244f85508931a49a0 \
+                rmd160  9ee3b6e68553997a128ca2b49992ddfbe157609b
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -39,11 +38,16 @@ depends_lib     port:gtk2 \
                 port:openssl \
                 port:orbit2
 
-configure.cppflags-append -L${prefix}/lib
+configure.args  --without-openldap
 
 destroot.keepdirs \
     ${destroot}${prefix}/etc/gconf/gconf.xml.mandatory \
     ${destroot}${prefix}/etc/gconf/gconf.xml.defaults
+
+variant openldap description {Enable support for openldap} {
+               depends_lib-append port:openldap
+               configure.args-delete --without-openldap
+}
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${my_name}/${branch}/
