--- a/dports/www/eruby/Portfile
+++ b/dports/www/eruby/Portfile
@@ -3,8 +3,7 @@
 PortSystem          1.0
 
 name                eruby
-version             1.0.5
-revision            1
+version             1.0.5.90
 categories          www ruby
 platforms           darwin
 maintainers         nomaintainer
@@ -13,13 +12,15 @@ description         Ruby embedded into text (HTML) pages
 long_description    ${description}
 
 homepage            http://www.modruby.net/en/index.rbx/eruby/whatis.html
-master_sites        http://www.modruby.net/archive
 
-checksums           md5     af294fe34dc6cf24228aec95167b3099 \
-                    sha1    d8900f8a7c30661351d2bf6f53753fa86df24996 \
-                    rmd160  4fb288dd768f98780dc705574968f090cd82d560
+fetch.type          svn
+svn.url             http://svn.modruby.net/repos/eruby/trunk
+svn.revision        141
+worksrcdir          trunk
 
 depends_lib         port:ruby
+
+universal_variant   no
 
 configure.cmd       ./configure.rb
 configure.args      --enable-shared
