databases/db46 - force MacPorts site for patch fetching until Oracle fixes their server to allow patch downloads again, ticket #26075
git-svn-id: https://svn.macports.org/repository/macports/trunk@70645 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/db46/Portfile
+++ b/dports/databases/db46/Portfile
@@ -22,7 +22,7 @@ homepage                http://www.oracle.com/database/berkeley-db/index.html
 master_sites            http://download-west.oracle.com/berkeley-db/ \
                         http://download-east.oracle.com/berkeley-db/ \
                         http://download-uk.oracle.com/berkeley-db/
-patch_sites             http://www.oracle.com/technology/products/berkeley-db/db/update/${version}/
+patch_sites             macports
 patchfiles              patch.${version}.1 \
                         patch.${version}.2 \
                         patch.${version}.3 \
