--- a/dports/databases/db47/Portfile
+++ b/dports/databases/db47/Portfile
@@ -24,7 +24,7 @@ master_sites    \
     http://download-west.oracle.com/berkeley-db/ \
     http://download-east.oracle.com/berkeley-db/ \
     http://download-uk.oracle.com/berkeley-db/
-patch_sites     http://www.oracle.com/technology/products/berkeley-db/db/update/${version}/
+patch_sites     macports
 patchfiles \
     patch.${version}.1 \
     patch.${version}.2 \
