php5: add upstream patch which fixes php5-mysql's +mysqlnd variant; see #25789
git-svn-id: https://svn.macports.org/repository/macports/trunk@70653 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/php5/Portfile
+++ b/dports/lang/php5/Portfile
@@ -6,6 +6,7 @@ name                    php5
 conflicts               php5-devel php52
 epoch                   1
 version                 5.3.3
+revision                1
 set major               [lindex [split ${version} .] 0]
 set my_name             php${major}
 dist_subdir             ${my_name}
@@ -48,8 +49,8 @@ depends_lib \
 
 # Use -p1 to accommodate the Suhosin patch
 patch.pre_args          -p1
-patchfiles \
-    patch-scripts-php-config.in.diff
+patchfiles              patch-scripts-php-config.in.diff \
+                        patch-ext-mysqlnd-mysqlnd.h.diff
 
 use_autoconf            yes
 autoconf.cmd            ${prefix}/bin/autoconf213
