--- a/dports/php/php5-mysql/Portfile
+++ b/dports/php/php5-mysql/Portfile
@@ -26,8 +26,6 @@ configure.args-append           --with-zlib-dir=${prefix}
 
 use_parallel_build              yes
 
-# mysqlnd is broken as of php 5.3.3; see http://bugs.php.net/bug.php?id=52417
-if {0} {
 variant mysqlnd conflicts mysql4 mysql5 description {Use MySQL Native Driver} {
     configure.args-append       --with-mysql=mysqlnd \
                                 --with-mysqli=mysqlnd \
@@ -42,16 +40,15 @@ variant mysqlnd conflicts mysql4 mysql5 description {Use MySQL Native Driver} {
         }
     }
 }
-}
 
-variant mysql4 conflicts mysql5 description {Use MySQL 4 libraries} {
+variant mysql4 conflicts mysql5 mysqlnd description {Use MySQL 4 libraries} {
     depends_lib-append          port:mysql4
     archcheck.files-append      lib/mysql/libmysqlclient.dylib
     configure.args-append       --with-mysql=${prefix} \
                                 --with-pdo-mysql=${prefix}
 }
 
-variant mysql5 conflicts mysql4 description {Use MySQL 5 libraries} {
+variant mysql5 conflicts mysql4 mysqlnd description {Use MySQL 5 libraries} {
     depends_lib-append          path:bin/mysql_config5:mysql5
     archcheck.files-append      lib/mysql5/mysql/libmysqlclient.dylib
     configure.args-append       --with-mysql=${workpath}/mysql5 \
@@ -66,5 +63,5 @@ variant mysql5 conflicts mysql4 description {Use MySQL 5 libraries} {
 }
 
 if {![variant_isset mysql4] && ![variant_isset mysql5]} {
-    default_variants +mysql5
+    default_variants +mysqlnd
 }
