lang/ruby: correct install locations of [site|vendor]_specific.rb
git-svn-id: https://svn.macports.org/repository/macports/trunk@70657 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby/Portfile
+++ b/dports/lang/ruby/Portfile
@@ -90,7 +90,7 @@ if {[variant_isset universal]} {
 destroot.target	install install-doc
 post-destroot {
 	foreach type {site vendor} {
-		set libdir ${destroot}${prefix}/lib/ruby/1.8
+		set libdir ${destroot}${prefix}/lib/ruby/${type}_ruby/1.8
 		xinstall -m 0755 -d ${libdir}
 		
 		# special file for installation control of modules
