policykit-gnome: update to version 0.96, fix livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70673 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/policykit-gnome/Portfile
+++ b/dports/gnome/policykit-gnome/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            policykit-gnome
-version         0.9.2
+version         0.96
 description     Provides convenience functions for using PolicyKit from GTK+ \
                 and GNOME applications.
 long_description \
@@ -15,11 +15,11 @@ platforms       darwin
 homepage        http://www.freedesktop.org/wiki/Software/PolicyKit
 master_sites    http://hal.freedesktop.org/releases/
 use_bzip2       yes
-distname        PolicyKit-gnome-${version}
+distname        polkit-gnome-${version}
 
-checksums       md5     fc478b168d0c926a9766b0b415ff4bbf \
-                sha1    2af77fad1ca2e9a4e5fce204960b9ba74cf59a8d \
-                rmd160  7d5a33a747d84ed49a13f260015a254ba569039f
+checksums       md5     611cf39fba2945320fc7a9ec49087e69 \
+                sha1    b4189f4e01f6775afe305ab361a535c86d3ceff0 \
+                rmd160  7c038c357a6df3d732bef28f7744768fb241092a
 
 depends_build   port:pkgconfig \
                 port:intltool \
@@ -28,7 +28,8 @@ depends_build   port:pkgconfig \
 depends_lib     port:gconf \
                 port:policykit
 
-configure.args  --disable-scrollkeeper \
+configure.args  --disable-introspection \
+                --disable-scrollkeeper \
                 --disable-schemas-install \
                 --disable-gtk-doc
 
@@ -45,4 +46,4 @@ post-activate {
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
-livecheck.regex "PolicyKit-gnome-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.regex "polkit-gnome-(\\d+(?:\\.\\d+)*)${extract.suffix}"
