gnome-platform-suite: update to version 2.30.2.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70674 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnome-platform-suite/Portfile
+++ b/dports/gnome/gnome-platform-suite/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            gnome-platform-suite
-version         2.26.3
+version         2.30.2
 categories      gnome devel
 maintainers     devans openmaintainer
 description     The GNOME Developer Platform
@@ -14,7 +14,7 @@ long_description    The GNOME Developer Platform is the set of libraries and \
                     suites of software packages that form the complete GNOME \
                     project offerings.
 platforms       darwin
-homepage        http://live.gnome.org/TwoPointTwentyfive/Platform
+homepage        http://live.gnome.org/TwoPointTwentynine/Platform
 master_sites
 
 depends_lib     port:at-spi \
@@ -23,7 +23,6 @@ depends_lib     port:at-spi \
                 path:lib/pkgconfig/glib-2.0.pc:glib2 \
                 port:gtk2 \
                 port:gtk-doc \
-                port:libglade2 \
                 path:lib/pkgconfig/pango.pc:pango
 
 #
@@ -43,9 +42,11 @@ depends_lib-append \
                port:libart_lgpl \
                port:libbonobo \
                port:libbonoboui \
+               port:libglade2 \
                port:libgnome \
                port:libgnomecanvas \
                port:libgnomeui \
+               port:libidl \
                port:orbit2
 
 distfiles
