--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                gst-plugins-base
-version             0.10.29
-revision            1
+version             0.10.30
 description         This is gst-plugins, a set of plug-ins for GStreamer.
 long_description    ${description}
 maintainers         rmsfisher openmaintainer
@@ -19,9 +18,9 @@ universal_variant   no
 use_bzip2           yes
 master_sites        gnome:sources/gst-plugins-base/0.10/ http://gstreamer.freedesktop.org/src/${name}/
 
-checksums           md5     d07e251152cccbaa81807c14cf0fd8c0 \
-                    sha1    22a96d2d4dfbd3c980e3337db6e6c1d06fb0841a \
-                    rmd160  7ade1abdd56201fb10c4e19f3507f91298b760e7
+checksums           md5     3ad90152b58563e1314af26c263f3c4c \
+                    sha1    17170bb23278c87bb3f4b299a3e7eaeed178bd31 \
+                    rmd160  69dc0be92144f343fee772e6999caff4d94ebb7f
 
 depends_lib	\
     port:gstreamer \
@@ -30,17 +29,16 @@ depends_lib	\
     port:libogg \
     port:libtheora \
     port:openssl \
-    port:libvorbis
-
-use_autoreconf      yes
-autoreconf.args     -fvi
+    port:libvorbis \
+    port:orc
 
 configure.args \
     --enable-experimental \
     --disable-libvisual\
     --disable-gst_v4l \
     --disable-alsa \
-    --disable-cdparanoia
+    --disable-cdparanoia \
+    --disable-ivorbis
 
 variant no_x11 {
     configure.args-append --without-x --disable-x --disable-xvideo --disable-xshm
