gst-plugins-farsight: update master_sites.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70678 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-farsight/Portfile
+++ b/dports/gnome/gst-plugins-farsight/Portfile
@@ -16,7 +16,7 @@ maintainers     devans openmaintainer
 categories      gnome
 platforms       darwin
 homepage        http://farsight.freedesktop.org/wiki/
-master_sites    http://farsight.freedesktop.org/releases/${name}/
+master_sites    http://farsight.freedesktop.org/releases/obsolete/${name}/
 
 checksums       md5     685a3dfd6752390e336e9556b62fad9e \
                 sha1    9bedd86044d4052ef98d81db61d838fbc632769a \
