Update to version 3.4.0. Add qt4 variant.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70681 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-traitsgui/Portfile
+++ b/dports/python/py26-traitsgui/Portfile
@@ -5,7 +5,7 @@ PortSystem	1.0
 PortGroup	python26 1.0
 
 name                py26-traitsgui
-version             3.0.4
+version             3.4.0
 categories-append   devel
 maintainers         nomaintainer 
 description         The Enthought traitsgui package
@@ -16,7 +16,13 @@ platforms           darwin
 homepage            http://code.enthought.com/projects/traits_gui/
 master_sites        http://www.enthought.com/repo/ETS/
 distname            TraitsGUI-${version}
-checksums           md5 34793275679bf3ece560b9cf78c1cf08
+checksums           md5 f83c3e05f8448b7bfd4d4a011da15771
 
 depends_build-append    port:py26-distribute
-depends_lib-append      port:py26-enthoughtbase port:py26-traitsbackendwx
+depends_lib-append      port:py26-enthoughtbase \
+                        port:py26-traitsbackendwx
+
+variant qt4 description {Use Qt4 backend} {
+   depends_lib-delete port:py26-traitsbackendwx
+   depends_lib-append port:py26-traitsbackendqt
+}
