--- a/dports/python/py26-traitsbackendwx/Portfile
+++ b/dports/python/py26-traitsbackendwx/Portfile
@@ -5,7 +5,7 @@ PortSystem	1.0
 PortGroup	python26 1.0
 
 name                py26-traitsbackendwx
-version             3.1.0
+version             3.4.0
 categories-append   devel
 maintainers         vcn.com:jjstickel openmaintainer 
 description         The Enthought traitsgui WX backend
@@ -14,11 +14,11 @@ platforms           darwin
 homepage            http://code.enthought.com/projects/traits_gui/
 master_sites        http://www.enthought.com/repo/ETS/
 distname            TraitsBackendWX-${version}
-checksums           md5 fc72754400663c2a8b657778ca1dbfc6
+checksums           md5 0776528c8205e2d90975bce7012c371d
 
 depends_build-append    port:py26-distribute
 depends_lib-append      port:py26-enthoughtbase\
                         port:py26-traits\
                         port:py26-wxpython
 
-patchfiles    patch-traitsbackendwx_helper.py.diff
+#patchfiles    patch-traitsbackendwx_helper.py.diff
