--- a/dports/python/py26-enthoughtbase/Portfile
+++ b/dports/python/py26-enthoughtbase/Portfile
@@ -5,7 +5,7 @@ PortSystem	1.0
 PortGroup	python26 1.0
 
 name                py26-enthoughtbase
-version             3.0.2
+version             3.0.5
 categories-append   devel
 maintainers         nomaintainer 
 description         The Enthought base package
@@ -15,9 +15,9 @@ platforms           darwin
 homepage            http://code.enthought.com/projects/enthought_base.php
 master_sites        http://www.enthought.com/repo/ETS/
 distname            EnthoughtBase-${version}
-checksums           md5 e4463c165534f1d31ad1ab5c2eced1b6
+checksums           md5 dce9dcea96c6bae722a34118f31dd12d
 
 depends_build-append  port:py26-distribute
 
-patchfiles          changeset_r24034.diff
-patch.pre_args      -p3
+#patchfiles          changeset_r24034.diff
+#patch.pre_args      -p3
