--- a/dports/python/py26-mayavi/Portfile
+++ b/dports/python/py26-mayavi/Portfile
@@ -5,18 +5,20 @@ PortSystem	1.0
 PortGroup	python26 1.0
 
 name                py26-mayavi
-version             3.2.0
+version             3.3.2
 categories-append   devel graphics math
 maintainers         nomaintainer 
 description         The Enthought mayavi package
-long_description    3D Scientific Data Visualization and Plotting using VTK \
-    as the rendering backend and (wx)python for the (G)UI. \
-    VTK must be compiled using carbon.
+long_description    3D Scientific Data Visualization and Plotting using VTK as the \
+    rendering backend and (wx)python for the (G)UI. VTK must be \
+    installed using the same framework (cocoa, carbon, x11/gtk) as wxWidgets \
+    and wxPython.
+
 platforms           darwin
 homepage            http://code.enthought.com/projects/mayavi/
 master_sites        http://www.enthought.com/repo/ETS/
 distname            Mayavi-${version}
-checksums           md5 efd2de257e517de54f7697526de9a04c
+checksums           md5 1cc31b3805631bbafd4adee95ec93a68
 
 depends_build-append    port:py26-distribute
 depends_lib-append      port:vtk5 \
@@ -25,12 +27,13 @@ depends_lib-append      port:vtk5 \
 
 depends_run-append    port:py26-ipython
 
-pre-fetch {
-    if {![file exists ${prefix}/include/vtk-5.2/vtkCarbonRenderWindow.h]} {
-        ui_error "vtk must be installed with the +carbon variant"
-        error "vtk must be installed with the +carbon variant"
-    }
-}
+# How to check for the framework used to install vtk and wxWidgets?
+#pre-fetch {
+#    if {![file exists ${prefix}/include/vtk-5.2/vtkCarbonRenderWindow.h]} {
+#        ui_error "vtk must be installed with the +carbon variant"
+#        error "vtk must be installed with the +carbon variant"
+#    }
+#}
 
-patchfiles          changeset_r24036.diff
-patch.pre_args      -p3
+#patchfiles          changeset_r24036.diff
+#patch.pre_args      -p3
