--- a/dports/devel/libconfig-hr/Portfile
+++ b/dports/devel/libconfig-hr/Portfile
@@ -4,17 +4,17 @@
 PortSystem      1.0
 
 name            libconfig-hr
-version         1.3.2
+version         1.4.5
 categories      devel
-maintainers     devans openmaintainer
+maintainers     nomaintainer
 platforms       darwin
 homepage        http://www.hyperrealm.com/libconfig/
 master_sites    ${homepage}
 distname        libconfig-${version}
 
-checksums       md5     094a82afd382aa2305c6cc3c06025c2d \
-                sha1    0dce0cd5fc103c4801feea2f68a9c57dcb16d6dc \
-                rmd160  b3d2e8898eee651311d5fc8154d4bd905e50ca89
+checksums       md5     f2219e1b2501e7296a7d3e971c63666a \
+                sha1    3301e730676e6eb15579d08b141891d7484f1350 \
+                rmd160  0298436f6c07f16c7e3ae3f0a48c35223510381c
 
 description \
     A new libconfig implementation with both C and C++ bindings.
