gutenprint: use path dependency for gimp2/gimp2-devel.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70689 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/gutenprint/Portfile
+++ b/dports/print/gutenprint/Portfile
@@ -25,7 +25,7 @@ checksums       md5     4db2605739b3cbc6fc72bb1665731aeb \
                 sha1    e4ddb21665578835d58267d59b57d8d970c3ee86 \
                 rmd160  ae6edf1dea2cd88572736bf0784a4353b59e7113
 
-depends_lib     lib:libgimp-2.0:gimp2
+depends_lib     path:lib/libgimp-2.0:gimp2
 
 pre-fetch {
     ui_msg "
