gimp-app: use path dependency for gimp2/gimp2-devel.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70690 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/gimp-app/Portfile
+++ b/dports/aqua/gimp-app/Portfile
@@ -14,7 +14,7 @@ long_description ${description}
 categories      aqua graphics
 homepage        http://gimp-app.sourceforge.net/
 
-depends_run     bin:gimp:gimp2
+depends_run     path:bin/gimp:gimp2
 
 master_sites    sourceforge
 distfiles       ScriptExec.tar.gz \
