stdinchi-1: update descriptions; see #26104
git-svn-id: https://svn.macports.org/repository/macports/trunk@70691 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/stdinchi-1/Portfile
+++ b/dports/science/stdinchi-1/Portfile
@@ -8,9 +8,9 @@ version             1.02
 categories          science
 maintainers         netatonce.net:petri \
                     openmaintainer
-description         IUPAC InChI
-long_description    IUPAC utility for International Chemical Identifier (InChI) \
-non-proprietary identifiers for chemical substances.
+description         IUPAC InChI for standard InChI
+long_description    IUPAC utility for standard International Chemical Identifier \
+(InChI) non-proprietary identifiers for chemical substances.
 homepage            http://www.iupac.org/inchi/
 platforms           darwin
 master_sites        http://www.iupac.org/inchi/download/
