--- a/dports/lang/stklos/Portfile
+++ b/dports/lang/stklos/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			stklos
-version			0.98
+version			1.00
 categories		lang
 platforms		darwin
 maintainers		mww
@@ -16,11 +16,13 @@ long_description	STklos is a free Scheme system supporting most of the \
 				application.
 
 homepage		http://www.stklos.net/
-master_sites		${homepage}download/
-checksums		sha1 9e7be62703c36af520b13ac37368d3951878c5c4
-patchfiles		patch-configure.diff
+master_sites		${homepage}/download/ \
+			ftp://kaolin.essi.fr/pub/STklos/
+checksums           md5     3fd4809205871b65882be9b9f7e17090 \
+                    sha1    397054641bbc721a4f3dfb2c85a31889e7ecbf93 \
+                    rmd160  ed89ddd27904d8e6a6acf165315bfde4e84348a2
 
-depends_lib		port:gmp port:pcre
+depends_lib		port:gmp port:pcre port:boehmgc
 
 configure.args	--mandir=${prefix}/share/man \
 				--disable-gtk \
@@ -30,11 +32,9 @@ configure.args	--mandir=${prefix}/share/man \
 test.run		yes
 
 post-destroot {
-	# remove doc files etc. from aux libs that are available separately
-	delete ${destroot}${prefix}/share/gc
+	# remove doc files etc.
 	delete ${destroot}${prefix}/share/info
 	delete ${destroot}${prefix}/share/man/man3
-	delete ${destroot}${prefix}/lib/stklos/pkgconfig
 }
 
 platform darwin 9 {
