Set 'destroot_qca' to simplify destroot installations. Correct 'configure' comment. Add in CMake file, installation, and use comment; does not conflict   with that installed by 'kdelibs4'.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70695 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca/Portfile
+++ b/dports/devel/qca/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 name                qca
 version             2.0.2
-revision            2
+revision            3
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel crypto security
 maintainers         michaelld openmaintainer
@@ -30,8 +30,8 @@ depends_lib          port:qt4-mac
 
 # patch to correct pkgconfig file for framework install, if selected.
 # and allow for 'debug' and 'framework' options at the same time.
-# This change is needed to allow for +combined [+framework]; handle
-# +debug [+framework] in pre-extract.
+# This change is needed to allow for +debug [+framework] -- disallow
+# just debug framework via no variants for it.
 patchfiles           patch-configure.diff
 
 set qt_dir           ${prefix}/libexec/qt4-mac
@@ -50,19 +50,30 @@ configure.args        --verbose         \
 destroot.destdir      INSTALL_ROOT="${destroot}"
 
 post-destroot {
+    # alias to destroot QCA top-level directory
+    set destroot_qca ${destroot}${qca_dir}
+
     # tweak header install for framework only
     if {![variant_isset no_framework]} {
         # when installed as a framework, link headers from
-        # the framework into ${qca_dir}/include
-        xinstall -d 755 ${destroot}${qca_dir}/include
-        ln -s ${qca_dir}/lib/qca.framework/Headers \
-            ${destroot}${qca_dir}/include/QtCrypto
+        # the framework into ${destroot_qca}/include
+        xinstall -d 755 ${destroot_qca}/include
+        ln -s ${destroot_qca}/lib/qca.framework/Headers \
+            ${destroot_qca}/include/QtCrypto
     }
 
     # install docs
-    xinstall -d 755 ${destroot}${qca_dir}/share/doc/${name}
+    xinstall -d 755 ${destroot_qca}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} COPYING README TODO \
-        ${destroot}${qca_dir}/share/doc/${name}
+        ${destroot_qca}/share/doc/${name}
+
+    # install cmake file (taken from port 'kdelibs4'). To use this
+    # file, include '-DCMAKE_MODULE_PATH=...' in configure.args during
+    # the initial 'configure' stage (which uses CMake), to the full
+    # path of where the CMake files are installed.
+    xinstall -d 755 ${destroot_qca}/share/cmake/modules
+    xinstall -m 644 -W ${filespath} FindQCA2.cmake \
+        ${destroot_qca}/share/cmake/modules
 }
 
 variant no_framework description \
