Update to version 2010.8.8. Added new maintainer. (#26108)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70697 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/fuse/ntfs-3g/Portfile
+++ b/dports/fuse/ntfs-3g/Portfile
@@ -3,10 +3,11 @@
 PortSystem 1.0
 
 name                ntfs-3g
-version             1.5130
+version             2010.8.8
 categories          fuse
 platforms           darwin
-maintainers         nomaintainer
+maintainers         netatonce.net:petri \
+                    openmaintainer
 description         Safe read/write NTFS driver for FUSE
 long_description    The NTFS-3G driver is an open source, freely available \
                     NTFS driver for FUSE with read and write support. It \
@@ -15,20 +16,21 @@ long_description    The NTFS-3G driver is an open source, freely available \
                     Most POSIX file system operations are supported, with the \
                     exception of full file ownership and access right support.
 
-homepage            http://www.ntfs-3g.org/
+homepage            http://www.tuxera.com/community/ntfs-3g-download/
 extract.suffix      .tgz
 
-master_sites        $homepage
-checksums           md5 ad3c40bba398d162f97c2936293eae1f \
-                    sha1 02b7a874b02827665c97123c6335e1d856054c42
+master_sites        http://tuxera.com/opensource/
+checksums           md5 6c109746c2708f679725a2ea441c61c6 \
+                    sha1 f9862700905b23b06e7944f663352227b9c776a6 \
+                    rmd160 07521bd66c4cd26bb40ac84629159eec8d8da43d
 
 livecheck.type      regex
-livecheck.regex     {<a href="ntfs-3g-(.+?)\.tgz">Stable}
+livecheck.regex     {stable version</font></b> is <a href="http://tuxera.com/opensource/ntfs-3g-(.+?)\.tgz">}
 
 depends_build       port:pkgconfig
 depends_lib         port:macfuse
 
-configure.args      --exec-prefix=${prefix}
+configure.args      --exec-prefix=${prefix} --with-fuse=external
 
 platform darwin {
     configure.ldflags-append    -framework CoreFoundation
