--- a/dports/audio/phonon/Portfile
+++ b/dports/audio/phonon/Portfile
@@ -1,11 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 PortGroup           kde4    1.0
 
 name                phonon
-version             4.3.0
-revision            1
+version             4.4.2
 categories          audio kde kde4
 maintainers         nomaintainer
 description         Cross Platform Multimedia API used by KDE4
@@ -15,7 +15,9 @@ homepage            http://phonon.kde.org
 master_sites        kde:stable/${name}/${version}/
 use_bzip2           yes
 distname            phonon-${version}
-checksums           md5 f851219ec1fb4eadc7904f053b6b498d
+checksums           md5 d9eab28383783261254f1cef3b92a3fa \
+                    sha1 c329d924fb75a89a9de8a4d799ff4dcd7ee3302e \
+                    rmd160 aa37903f166904dd09401541df8fc268a2858606
 
 configure.args-append	-DCMAKE_INSTALL_NAME_DIR=${prefix}/lib \
                         ../${distname}
