--- a/dports/gnome/gnome-doc-utils/Portfile
+++ b/dports/gnome/gnome-doc-utils/Portfile
@@ -30,6 +30,7 @@ use_bzip2      yes
 use_parallel_build  no
 
 depends_build  \
+    port:intltool \
     port:pkgconfig \
     port:p5-xml-parser
 
