tsocks: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@70701 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/tsocks/Portfile
+++ b/dports/net/tsocks/Portfile
@@ -50,6 +50,8 @@ post-destroot {
 }
 }
 
-post-activate { ui_msg "\n
-The tsocks.conf.sample file is in ${prefix}/etc.  Rename it to tsocks.conf to use it.  You should set tordns_enable to false if you're not using Tor.\n"
-}
+notes "
+The tsocks.conf.sample file is in ${prefix}/etc.\
+Rename it to tsocks.conf to use it.\
+You should set tordns_enable to false if you're not using Tor.
+"
