tsocks: whitespace / formatting changes only
git-svn-id: https://svn.macports.org/repository/macports/trunk@70702 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/tsocks/Portfile
+++ b/dports/net/tsocks/Portfile
@@ -1,53 +1,58 @@
 # $Id$
 
-PortSystem 1.0
+PortSystem              1.0
 
-name             tsocks
-version          1.8.4
-revision         1
-categories       net
-maintainers      nomaintainer
-description      Transparent SOCKS proxying library
-long_description \
-	tsocks allows non SOCKS aware applications (e.g \
-	telnet, ssh, ftp etc) to use SOCKS without any \
-	modification. It does this by intercepting the \
-	calls that applications make to establish \
-	network connections and negotating them through \
-	a SOCKS server as necessary.
-homepage         http://giig.ugr.es/~rgarcia/tsocks/
-master_sites     ${homepage}
-use_bzip2        yes
-platforms        darwin
-checksums        md5 dccf57d632136b62dbe7ec7970b6c3e3
-use_autoconf     yes
-patchfiles       patch-configure.in \
-		 patch-Makefile.in \
-		 patch-tsocks.in \
-		 patch-tsocks.c \
-		 patch-tsocks.h \
-		 patch-dead_pool.c
+name                    tsocks
+version                 1.8.4
+revision                1
+categories              net
+platforms               darwin
+maintainers             nomaintainer
 
-configure.args   --with-conf=${prefix}/etc/tsocks.conf \
-		 --libdir=${prefix}/lib \
-		 --mandir=${prefix}/share/man
+description             Transparent SOCKS proxying library
+
+long_description        tsocks allows non SOCKS aware applications (e.g \
+                        telnet, ssh, ftp etc) to use SOCKS without any \
+                        modification. It does this by intercepting the \
+                        calls that applications make to establish \
+                        network connections and negotating them through \
+                        a SOCKS server as necessary.
+
+homepage                http://giig.ugr.es/~rgarcia/tsocks/
+master_sites            ${homepage}
+use_bzip2               yes
+
+checksums               md5     dccf57d632136b62dbe7ec7970b6c3e3
+
+patchfiles              patch-Makefile.in \
+                        patch-configure.in \
+                        patch-dead_pool.c \
+                        patch-tsocks.c \
+                        patch-tsocks.h \
+                        patch-tsocks.in
 
 post-extract {
-	reinplace "s|/etc/tsocks.conf|${prefix}/etc/tsocks.conf|g" \
-                ${worksrcpath}/tsocks.8
+    reinplace "s|/etc/tsocks.conf|${prefix}/etc/tsocks.conf|g" \
+        ${worksrcpath}/tsocks.8
 }
+
+use_autoconf            yes
+
+configure.args          --with-conf=${prefix}/etc/tsocks.conf \
+                        --libdir=${prefix}/lib \
+                        --mandir=${prefix}/share/man
 
 post-destroot {
-	xinstall -m 755 -d ${destroot}${prefix}/etc
-	xinstall -m 644 ${worksrcpath}/tsocks.conf.simple.example ${destroot}${prefix}/etc/tsocks.conf.sample
-
-	xinstall -m 755 -d ${destroot}${prefix}/share/examples/tsocks
-	eval xinstall -m 644 [glob ${worksrcpath}/*.example] ${destroot}${prefix}/share/examples/tsocks
-
-	xinstall -m 755 -d ${destroot}${prefix}/share/doc/tsocks
-	foreach doc { COPYING ChangeLog FAQ INSTALL TODO } {
-		xinstall -m 644 ${worksrcpath}/${doc} ${destroot}${prefix}/share/doc/tsocks/${doc}
-}
+    xinstall -m 755 -d ${destroot}${prefix}/etc
+    xinstall -m 644 ${worksrcpath}/tsocks.conf.simple.example ${destroot}${prefix}/etc/tsocks.conf.sample
+    
+    xinstall -m 755 -d ${destroot}${prefix}/share/examples/tsocks
+    eval xinstall -m 644 [glob ${worksrcpath}/*.example] ${destroot}${prefix}/share/examples/tsocks
+    
+    xinstall -m 755 -d ${destroot}${prefix}/share/doc/tsocks
+    foreach doc { COPYING ChangeLog FAQ INSTALL TODO } {
+        xinstall -m 644 ${worksrcpath}/${doc} ${destroot}${prefix}/share/doc/tsocks/${doc}
+    }
 }
 
 notes "
