tsocks: avoid "WARNING: unrecognized options: --disable-dependency-tracking"
git-svn-id: https://svn.macports.org/repository/macports/trunk@70703 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/tsocks/Portfile
+++ b/dports/net/tsocks/Portfile
@@ -42,6 +42,8 @@ configure.args          --with-conf=${prefix}/etc/tsocks.conf \
                         --libdir=${prefix}/lib \
                         --mandir=${prefix}/share/man
 
+configure.universal_args-delete --disable-dependency-tracking
+
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/etc
     xinstall -m 644 ${worksrcpath}/tsocks.conf.simple.example ${destroot}${prefix}/etc/tsocks.conf.sample
