tsocks: do not need foreach loop to install multiple files; use xinstall -W
git-svn-id: https://svn.macports.org/repository/macports/trunk@70705 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/tsocks/Portfile
+++ b/dports/net/tsocks/Portfile
@@ -51,9 +51,7 @@ post-destroot {
     eval xinstall -m 644 [glob ${worksrcpath}/*.example] ${destroot}${prefix}/share/examples/tsocks
     
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/tsocks
-    foreach doc { COPYING ChangeLog FAQ INSTALL TODO } {
-        xinstall -m 644 ${worksrcpath}/${doc} ${destroot}${prefix}/share/doc/tsocks/${doc}
-    }
+    xinstall -m 644 -W ${worksrcpath} COPYING ChangeLog FAQ INSTALL TODO ${destroot}${prefix}/share/doc/tsocks
 }
 
 notes "
