gimp2: fix breakage from python26 changeover (#25972)
git-svn-id: https://svn.macports.org/repository/macports/trunk@70706 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp2/Portfile
+++ b/dports/graphics/gimp2/Portfile
@@ -64,6 +64,9 @@ platform darwin 9 {
 
 use_parallel_build  yes
 configure.python    ${prefix}/bin/python2.6
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig:${prefix}/lib/pkgconfig:${prefix}/share/pkgconfig
+configure.env   PATH=${python_framework}/bin:$env(PATH)
 configure.args  --build=${configure.build_arch}-apple-${os.platform}${os.version} \
                 --enable-mp \
                 --with-pdbgen \
