--- a/dports/net/dante/Portfile
+++ b/dports/net/dante/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 
 name                    dante
 version                 1.2.1
+revision                1
 categories              net
 platforms               darwin
 maintainers             nomaintainer
@@ -29,7 +30,10 @@ checksums               md5     8faa404af6e42c4bf9b784492c6041d7 \
                         sha1    381803f0e6149c064c679b04dd9abc647cfc76c0 \
                         rmd160  219398c9f87943f382ddf2dc56d3604efa4360ca
 
+patchfiles              patch-configure.diff
+
 configure.args          --mandir=${prefix}/share/man \
+                        --without-gssapi \
                         --with-socks-conf=${prefix}/etc/dante/socks.conf \
                         --with-sockd-conf=${prefix}/etc/dante/sockd.conf \
                         --with-pidfile=${prefix}/var/run/dante/dante.pid
