--- a/dports/aqua/qt4-mac-devel/Portfile
+++ b/dports/aqua/qt4-mac-devel/Portfile
@@ -11,7 +11,7 @@ set select_name     ${select_group}-${select_branch}
 
 name                ${select_name}
 version             4.7.0-beta2
-revision            1
+revision            2
 categories          aqua
 platforms           macosx
 maintainers         michaelld
@@ -39,6 +39,26 @@ depends_lib         port:zlib port:dbus port:openssl port:sqlite3 \
 # Test for Precompiled-headers support requires a C++ compiler,
 # but configure calls it, by default, with a C compiler.
 patchfiles          patch-precomp.test.diff
+
+post-extract {
+    # correct phonon version info.
+    # (1) retrieve the correct info (minor, patch)
+    set phonon_minor_version \
+        [exec grep PHONON_LIB_MINOR_VERSION \
+             ${worksrcpath}/src/3rdparty/phonon/CMakeLists.txt | \
+             grep set | tr -dc '\[0-9\]']
+    set phonon_patch_version \
+        [exec grep PHONON_LIB_PATCH_VERSION \
+             ${worksrcpath}/src/3rdparty/phonon/CMakeLists.txt | \
+             grep set | tr -dc '\[0-9\]']
+
+    # (2) correct that which Qt uses
+    # (there has GOT to be a better way :)
+    reinplace "/PHONON_MINOR_VERSION =/s@\\(\[^0-9\]*\\)\[0-9\]*\\(\[^0-9\]*\\)@\\1${phonon_minor_version}\\2@" \
+        ${worksrcpath}/src/phonon/phonon.pro
+    reinplace "/PHONON_PATCH_VERSION =/s@\\(\[^0-9\]*\\)\[0-9\]*\\(\[^0-9\]*\\)@\\1${phonon_patch_version}\\2@" \
+        ${worksrcpath}/src/phonon/phonon.pro
+}
 
 # The build process uses -fconstant-cfstrings.
 # configure.compiler should therefore not be one of the MacPorts compilers.
@@ -320,6 +340,17 @@ post-destroot {
     xinstall -c -m 644 ${filespath}/${select_name} \
         ${destroot}${prefix}/etc/select/${select_group}/${select_name}
 
+    # install cmake files (taken from port 'kdelibs4'). To use this
+    # file, include '-DCMAKE_MODULE_PATH=...' in configure.args during
+    # the initial 'configure' stage (which uses CMake), to the full
+    # path of where the CMake files are installed.
+    xinstall -m 755 -d ${destroot_qt}/share/cmake/modules
+    foreach file { FindQt4.cmake Qt4ConfigDependentSettings.cmake \
+                       Qt4Macros.cmake } {
+        xinstall -c -m 644 ${filespath}/${file} \
+            ${destroot_qt}/share/cmake/modules
+    }
+
     # then, reinplace the select file as necessary for variants; put
     # these here instead of in the variants because I don't know which
     # are executed first (this post-destroot or a variant's) & the
@@ -338,7 +369,7 @@ post-destroot {
         if {![variant_isset examples]} {
             # the directory "share/${name}" will be empty.  keep it
             # around since other ports might install into it.
-            destroot.keepdirs ${destroot}${destroot_qt}/share/${name}
+            destroot.keepdirs ${destroot_qt}/share/${name}
         }
     }
 }
