--- a/dports/lang/gcc46/Portfile
+++ b/dports/lang/gcc46/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			gcc46
-version			4.6-20100612
+version			4.6-20100814
 platforms		darwin
 categories		lang
 maintainers		mww
@@ -33,26 +33,26 @@ distfiles		${dcore}:gcc ${dfort}:gcc ${dcxx}:gcc ${djava}:gcc ${dobjc}:gcc ${ecj
 extract.only		${dcore} ${dfort} ${dcxx} ${djava} ${dobjc}
 
 checksums           gcc-core-${version}.tar.bz2 \
-                    md5     3f666a86055db21afb6c7795716cd2aa \
-                    sha1    0aa824acf6fd105c6002bc19477664eec134e7e1 \
-                    rmd160  134ef49f47c06b0f56fc79a86b71a4ce38ef12ef \
+                    md5     af9ba478acf849995599c9ec0c612add \
+                    sha1    8786630f2ee97c09e391165ec212cfb28ade8d64 \
+                    rmd160  8854cff721b1c0d1ce799caf572fbbf8fe23426b \
                     gcc-fortran-${version}.tar.bz2 \
-                    md5     89f58cfaf6c6986c274a2f08aa1fbb86 \
-                    sha1    fffc489ca1db449bcdad36bf9b4a79652044d5e0 \
-                    rmd160  0eece241bc6dca75a3edcdf73e2c8753239501c2 \
+                    md5     e7ee7f87ddbe7966bcb8d5dcfff884af \
+                    sha1    33ed1544c53e8777422a2b551dcd7d7925c7f4a7 \
+                    rmd160  49eb88f446f05073ba62e266d4022e1f2310bd63 \
                     gcc-g++-${version}.tar.bz2 \
-                    md5     4b2957634967f1d452b52c39d2b32cf7 \
-                    sha1    6a959b1701d5f0a71ef334b940ff900e2355fa97 \
-                    rmd160  fbfe2bb919d234324243ffe606c798aef9fe332b \
+                    md5     ea23563d21988e352d3384f57a5316e0 \
+                    sha1    133a37d9fde1dc2f912159d7e2e0163dff5caa93 \
+                    rmd160  883de0a11b39e0a5319a4cf8d2b4d8df67f4ead5 \
                     gcc-java-${version}.tar.bz2 \
-                    md5     fdd1c0118cfb7221c626a686cf50bf39 \
-                    sha1    d08eaff598de4e5a44a8775585d9580347aab247 \
-                    rmd160  2ada408b7722cb3505d4e26f98ba6b7907d198d6 \
+                    md5     9ff87b097aa7a44fa106287fe5719365 \
+                    sha1    af055547064f23d25358a29dc1dcf65389bab07b \
+                    rmd160  18f85dbe984101f77b394495284bc8de4d165e97 \
                     gcc-objc-${version}.tar.bz2 \
-                    md5     6d029df100d44318d0a47e074a810010 \
-                    sha1    43404e2cf526f39e5afc954f8d61dc47d0c16468 \
-                    rmd160  c7b1b2ad8c44e583347bebd7a4e0d7c1ea87afc5 \
-                    ${ecj} \
+                    md5     09ec3e4750fd5932056e107feeee40b4 \
+                    sha1    1698dab8df62a5b7c2c62b45b0a11e736e446c8a \
+                    rmd160  f60b43ed65dccbad009da34f73166967f4efea2a \
+                    ecj-4.5.jar \
                     md5     d7cd6a27c8801e66cbaa964a039ecfdb \
                     sha1    58c1d79c64c8cd718550f32a932ccfde8d1e6449 \
                     rmd160  d3f4da657f086b6423f74e93f001132f4855368a
@@ -60,10 +60,6 @@ checksums           gcc-core-${version}.tar.bz2 \
 use_bzip2		yes
 
 depends_lib		port:gmp port:mpfr port:libiconv port:libmpc
-
-patchfiles		patch-160729.diff
-patch.pre_args	-p1
-patch.dir		${workpath}/gcc-${version}
 
 set major		4.6
 
