xdotool: update to 2.20100818.3004
git-svn-id: https://svn.macports.org/repository/macports/trunk@70714 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xdotool/Portfile
+++ b/dports/x11/xdotool/Portfile
@@ -3,7 +3,7 @@
 PortSystem                  1.0
 
 name                        xdotool
-version                     2.20100701.2961
+version                     2.20100818.3004
 categories                  x11 devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -28,9 +28,9 @@ notes                       "To use xdotool (and avoid the error message\
 homepage                    http://www.semicomplete.com/projects/xdotool/
 master_sites                googlecode:semicomplete
 
-checksums                   md5     f66ded5c7aa6df4971aef15c5f83e787 \
-                            sha1    f23d45f0f5669a6a24cabd0e208a62cf51f7ada7 \
-                            rmd160  9ee230451893b8068dfc88c9f61c159426c8bfa2
+checksums                   md5     683243c9bde9393f17428833acc12334 \
+                            sha1    ef5b4e33b3d47f73c270664382bd3ead82ff4a0d \
+                            rmd160  75bf08e3386ca0a4ab96e61fbf6bb6d05e435c68
 
 depends_build               port:pkgconfig \
                             path:bin/perl:perl5
@@ -40,6 +40,8 @@ depends_lib                 port:xorg-libXtst
 patchfiles                  patch-Makefile.diff
 
 use_configure               no
+
+configure.ldflags-append    -lX11
 
 build.env                   PREFIX=${prefix} \
                             CC=${configure.cc} \
