--- a/dports/graphics/gimp2-devel/Portfile
+++ b/dports/graphics/gimp2-devel/Portfile
@@ -64,6 +64,9 @@ platform darwin 9 {
 
 use_parallel_build  yes
 configure.python    ${prefix}/bin/python2.6
+set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_framework}/lib/pkgconfig:${prefix}/lib/pkgconfig:${prefix}/share/pkgconfig
+configure.env   PATH=${python_framework}/bin:$env(PATH)
 configure.args  --build=${configure.build_arch}-apple-${os.platform}${os.version} \
                 --enable-mp \
                 --with-pdbgen \
