--- a/dports/perl/p5-crypt-openssl-x509/Portfile
+++ b/dports/perl/p5-crypt-openssl-x509/Portfile
@@ -3,10 +3,20 @@
 PortSystem              1.0
 PortGroup               perl5 1.0
 
-perl5.setup             Crypt-OpenSSL-X509 0.7
+perl5.setup             Crypt-OpenSSL-X509 1.3
 maintainers             nomaintainer
 description             Perl extension to OpenSSL's X509 API.
 long_description        ${description}
 
-checksums               md5 49d9481c82e764fa8fdd955a48b6c250
+checksums               md5 1d33d511ce0c83682a5aa04dbed42ac6 \
+                        sha1 bbbb616eef2717d7d0a44baef8d3eaa7b23e7600
 platforms               darwin
+
+depends_lib-append      port:openssl
+
+patchfiles              X509.xs.diff
+
+post-patch {
+    reinplace "s|/usr/include/openssl|${prefix}/include/openssl|g" ${worksrcpath}/Makefile.PL
+    reinplace "s|/usr/lib|${prefix}/lib|g" ${worksrcpath}/Makefile.PL
+}
