When building as framework, fix header link from include to framework Headers.
git-svn-id: https://svn.macports.org/repository/macports/trunk@70723 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qca/Portfile
+++ b/dports/devel/qca/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 name                qca
 version             2.0.2
-revision            3
+revision            4
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel crypto security
 maintainers         michaelld openmaintainer
@@ -58,7 +58,7 @@ post-destroot {
         # when installed as a framework, link headers from
         # the framework into ${destroot_qca}/include
         xinstall -d 755 ${destroot_qca}/include
-        ln -s ${destroot_qca}/lib/qca.framework/Headers \
+        ln -s ${qca_dir}/lib/qca.framework/Headers \
             ${destroot_qca}/include/QtCrypto
     }
 
