fixed #25649, patched deprecated GTK calls
git-svn-id: https://svn.macports.org/repository/macports/trunk@70725 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/tiemu3/Portfile
+++ b/dports/math/tiemu3/Portfile
@@ -34,7 +34,8 @@ depends_lib         port:libiconv \
                     port:gtk2 \
                     port:libglade2
 
-patchfiles			patch-keynames.c
+patchfiles			patch-keynames-c.diff \
+                    patch-tiemu3.diff
 patch.pre_args      -p1
 
 configure.args-append		--without-kde --disable-debugger --disable-gdb
